--- a/src/Components/Form/Form.css
+++ b/src/Components/Form/Form.css
@@ -8,6 +8,9 @@ form{
 input{
   padding: 5px 10px;
   margin-right: 20px;
+  background-color: transparent;
+  border: 1px solid white ;
+  color: white;
 }
 
 button{
