--- a/src/index.css
+++ b/src/index.css
@@ -5,12 +5,14 @@
 }
 
 body{
+  min-height: 100vh;
   display: flex;
   justify-content: center;
   text-align: center;
 
   font-size: 18px;
-  background-color: black;
   color: white;
   font-family: Arial, Helvetica, sans-serif;
+  background: linear-gradient(135deg, rgba(129,6,138,1) 28%, rgba(0,212,255,1) 100%);
+
 }
